Thêm tính năng tải lên nhiều lá bài cùng lúc

--- a/views/admin.ejs
+++ b/views/admin.ejs
@@ -197,7 +197,7 @@
           <div class="card-body">
             <form id="uploadCardForm" enctype="multipart/form-data">
               <div class="input-group">
-                <input type="file" class="form-control" id="cardImage" name="cardImage" accept="image/jpeg,image/png">
+                <input type="file" class="form-control" id="cardImage" name="cardImage" accept="image/jpeg,image/png" multiple>
                 <button type="submit" class="btn btn-primary">
                   <i class="fas fa-upload"></i> Tải Lên
                 </button>
